<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:dialogTitle="@string/pref_title_dialog_altura"
        android:inputType="numberSigned|numberDecimal"
        android:key="@string/pref_key_altura"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_altura" />

    <PreferenceScreen
        android:key="button_voicemail_category_key"
        android:title="@string/pref_title_gain_expo">

        <intent
            android:targetPackage="com.cl3service.camera"
            android:targetClass="com.cl3service.camera.preferences.GainExpoPreference"/>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_voicemail_category_key"
        android:title="@string/pref_title_white_balance"
        android:persistent="false">

        <intent
            android:targetPackage="com.cl3service.camera"
            android:targetClass="com.cl3service.camera.preferences.WhiteBalancePreference"/>

    </PreferenceScreen>

    <!-- <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->
</PreferenceScreen>
